# Playwright

./: .env  .gitignore  government.txt  pyproject.toml
tests/: conftest.py  test_application.py  test_application_form.py  test_applicationv2.py  test_applicationv3.py  test_homepage.py  test_melon_task.py  test_melon_taskv1.py  test_required.py  test_script.py
