[project]
name = "py-playwright-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "andrijasoldo1",email = "andrija.soldo@fsre.sum.ba"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-playwright = "^0.7.0"
faker = "^37.0.0"
playwright = "^1.50.0"

